# openrelik-worker-mftecmd

./: Dockerfile  README.md  openrelik.yaml  pyproject.toml
src/: app.py  mftecmd.py
